// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bolt Tabs Props Inset: auto 1`] = `
<bolt-tabs inset="auto">
  <div class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--inset">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 1
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 2
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 3
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
  </div>
</bolt-tabs>
`;

exports[`Bolt Tabs Props Inset: off 1`] = `
<bolt-tabs inset="off">
  <div class="c-bolt-tabs c-bolt-tabs--align-start ">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 1
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 2
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 3
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
  </div>
</bolt-tabs>
`;

exports[`Bolt Tabs Props Inset: on 1`] = `
<bolt-tabs inset="on">
  <div class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--inset">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 1
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small c-bolt-tab-panel--inset">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 2
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small c-bolt-tab-panel--inset">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 3
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small c-bolt-tab-panel--inset">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
  </div>
</bolt-tabs>
`;

exports[`Bolt Tabs Props align: center 1`] = `
<bolt-tabs align="center">
  <div class="c-bolt-tabs c-bolt-tabs--align-center c-bolt-tabs--inset">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 1
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 2
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 3
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
  </div>
</bolt-tabs>
`;

exports[`Bolt Tabs Props align: end 1`] = `
<bolt-tabs align="end">
  <div class="c-bolt-tabs c-bolt-tabs--align-end c-bolt-tabs--inset">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 1
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 2
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 3
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
  </div>
</bolt-tabs>
`;

exports[`Bolt Tabs Props align: start 1`] = `
<bolt-tabs align="start">
  <div class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--inset">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 1
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 2
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 3
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
  </div>
</bolt-tabs>
`;

exports[`Bolt Tabs Props label_spacing: medium 1`] = `
<bolt-tabs label-spacing="medium">
  <div class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--inset">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-medium"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 1
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-medium"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 2
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-medium"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 3
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
  </div>
</bolt-tabs>
`;

exports[`Bolt Tabs Props label_spacing: small 1`] = `
<bolt-tabs label-spacing="small">
  <div class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--inset">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 1
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 2
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 3
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
  </div>
</bolt-tabs>
`;

exports[`Bolt Tabs Props panel_spacing: medium 1`] = `
<bolt-tabs panel-spacing="medium">
  <div class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--inset">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 1
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-medium">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 2
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-medium">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 3
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-medium">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
  </div>
</bolt-tabs>
`;

exports[`Bolt Tabs Props panel_spacing: none 1`] = `
<bolt-tabs panel-spacing="none">
  <div class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--inset">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 1
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-none">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 2
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-none">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 3
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-none">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
  </div>
</bolt-tabs>
`;

exports[`Bolt Tabs Props panel_spacing: small 1`] = `
<bolt-tabs panel-spacing="small">
  <div class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--inset">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 1
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 2
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 3
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
  </div>
</bolt-tabs>
`;

exports[`Bolt Tabs Props scrollOffset 1`] = `
<bolt-tabs scroll-offset="100">
  <div class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--inset">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 1
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 2
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 3
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
  </div>
</bolt-tabs>
`;

exports[`Bolt Tabs Props scrollOffsetSelector 1`] = `
<bolt-tabs scroll-offset-selector=".example-selector">
  <div class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--inset">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 1
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 2
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 3
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
  </div>
</bolt-tabs>
`;

exports[`Bolt Tabs Props selected_tab 1`] = `
<bolt-tabs selected-tab="2">
  <div class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--inset">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 1
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 2
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 3
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
  </div>
</bolt-tabs>
`;

exports[`Bolt Tabs default 1`] = `
<bolt-tabs>
  <div class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--inset">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 1
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 2
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 3
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
  </div>
</bolt-tabs>
`;

exports[`Bolt Tabs default with web component 1`] = `
<bolt-tabs>
  <div class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--inset">
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-1"
           class="c-bolt-tabs__input"
           checked
    >
    <label for="tabs-12345-1"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 1
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-2"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-2"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 2
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
    <input type="radio"
           name="tabs-12345"
           id="tabs-12345-3"
           class="c-bolt-tabs__input"
    >
    <label for="tabs-12345-3"
           class="c-bolt-tabs__label c-bolt-tabs__label--spacing-small"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </label>
    <div class="c-bolt-tab-panel__outer">
      <ssr-keep for="bolt-tabs">
        <bolt-tab-panel>
          <ssr-keep for="bolt-tab-panel">
            <div slot="label">
              Tab label 3
            </div>
          </ssr-keep>
          <div class="c-bolt-tab-panel c-bolt-tab-panel--spacing-small">
            <div role="tabpanel"
                 class="c-bolt-tab-panel__content"
            >
              <ssr-keep for="bolt-tab-panel">
                This is the tab content.
              </ssr-keep>
            </div>
          </div>
        </bolt-tab-panel>
      </ssr-keep>
    </div>
  </div>
</bolt-tabs>
`;

exports[`Bolt Tabs default with web component 2`] = `
<div class="c-bolt-tabs c-bolt-tabs--align-start c-bolt-tabs--inset">
  <div role="tablist"
       class="c-bolt-tabs__nav"
  >
    <bolt-trigger no-outline
                  role="tab"
                  class="c-bolt-tabs__label c-bolt-tabs__item c-bolt-tabs__label--spacing-small"
                  display="inline"
                  aria-selected="true"
                  aria-controls="tab-panel-12345-1"
                  id="tab-label-12345-1"
                  tabindex="0"
                  aria-hidden="false"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 1
        </span>
      </span>
    </bolt-trigger>
    <bolt-trigger no-outline
                  role="tab"
                  class="c-bolt-tabs__label c-bolt-tabs__item c-bolt-tabs__label--spacing-small"
                  display="inline"
                  aria-selected="false"
                  aria-controls="tab-panel-12345-2"
                  id="tab-label-12345-2"
                  tabindex="-1"
                  aria-hidden="false"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 2
        </span>
      </span>
    </bolt-trigger>
    <bolt-trigger no-outline
                  role="tab"
                  class="c-bolt-tabs__label c-bolt-tabs__item c-bolt-tabs__label--spacing-small"
                  display="inline"
                  aria-selected="false"
                  aria-controls="tab-panel-12345-3"
                  id="tab-label-12345-3"
                  tabindex="-1"
                  aria-hidden="false"
    >
      <span class="c-bolt-tabs__label-inner">
        <span class="c-bolt-tabs__label-text">
          Tab label 3
        </span>
      </span>
    </bolt-trigger>
    <div class="c-bolt-tabs__item c-bolt-tabs__show-more is-hidden"
         aria-hidden="true"
    >
      <button type="button"
              aria-haspopup="true"
              aria-expanded="false"
              class="c-bolt-tabs__button c-bolt-tabs__show-button"
      >
        <span class="c-bolt-tabs__show-text">
          More
        </span>
        <span class="c-bolt-tabs__show-icon">
          <bolt-icon name="chevron-down">
            <style>
              bolt-icon{display:inline-grid;place-items:center;vertical-align:middle;transition:inherit}bolt-icon:not([size]){width:1em;height:1em}bolt-icon:not(:resolved){height:0;padding-bottom:100%}:host(bolt-icon){display:inline-grid;place-items:center;vertical-align:middle;transition:inherit}:host(bolt-icon):not([size]){width:1em;height:1em}:host(bolt-icon):not(:resolved){height:0;padding-bottom:100%}.c-bolt-icon{display:block;position:relative}.c-bolt-icon__icon{display:block;box-sizing:border-box;position:relative;width:1em;height:1em;pointer-events:none}.c-bolt-icon__icon--small{width:16px;height:16px}.c-bolt-icon__icon--medium{width:24px;height:24px}.c-bolt-icon__icon--large{width:32px;height:32px}.c-bolt-icon__icon--xlarge{width:38px;height:38px}.c-bolt-icon--small>.c-bolt-icon__icon{stroke:currentColor;stroke-width:1px}.c-bolt-icon--small.has-background{padding:6px}.c-bolt-icon--medium.has-background{padding:8px}.c-bolt-icon--large.has-background{padding:12px}.c-bolt-icon--xlarge.has-background{padding:13px}.c-bolt-icon__background{fill:currentColor;fill:var(--m-bolt-text,currentColor)}.c-bolt-icon__background-shape{opacity:.1;position:absolute;top:0;left:0;width:100%;height:100%;background-color:currentColor}@supports (--css:variables){.c-bolt-icon__background-shape{opacity:var(--bolt-theme-icon-background-opacity,.1);background-color:var(--bolt-theme-icon-background,var(--m-bolt-text,currentColor))}}.c-bolt-icon__background-shape--circle{border-radius:50%}.c-bolt-icon__background-shape--square{border-radius:3px;border-radius:var(--bolt-theme-icon-radius,3px)}.c-bolt-icon__background-shape--outline{opacity:.8;border-radius:50%;border-width:2px;border-style:solid;border-color:currentColor;background-color:transparent}.t-bolt-light .c-bolt-icon--gray,.t-bolt-xlight .c-bolt-icon--gray,:root .c-bolt-icon--gray{color:#5c5d66;--bolt-theme-icon:#5c5d66;filter:drop-shadow(0 0 1px rgba(255, 255, 255, .2))}.t-bolt-light .c-bolt-icon--gray.has-background,.t-bolt-xlight .c-bolt-icon--gray.has-background,:root .c-bolt-icon--gray.has-background{--bolt-theme-icon:white;--bolt-theme-icon-background:#5c5d66;--bolt-theme-icon-background-opacity:1;color:#fff}.t-bolt-light .c-bolt-icon--gray.has-background .c-bolt-icon__background-shape,.t-bolt-xlight .c-bolt-icon--gray.has-background .c-bolt-icon__background-shape,:root .c-bolt-icon--gray.has-background .c-bolt-icon__background-shape{opacity:1;background-color:#5c5d66}.t-bolt-light .c-bolt-icon--navy,.t-bolt-xlight .c-bolt-icon--navy,:root .c-bolt-icon--navy{color:#3e67bb;--bolt-theme-icon:#3e67bb;filter:drop-shadow(0 0 1px rgba(255, 255, 255, .2))}.t-bolt-light .c-bolt-icon--navy.has-background,.t-bolt-xlight .c-bolt-icon--navy.has-background,:root .c-bolt-icon--navy.has-background{--bolt-theme-icon:white;--bolt-theme-icon-background:#3e67bb;--bolt-theme-icon-background-opacity:1;color:#fff}.t-bolt-light .c-bolt-icon--navy.has-background .c-bolt-icon__background-shape,.t-bolt-xlight .c-bolt-icon--navy.has-background .c-bolt-icon__background-shape,:root .c-bolt-icon--navy.has-background .c-bolt-icon__background-shape{opacity:1;background-color:#3e67bb}.t-bolt-light .c-bolt-icon--orange,.t-bolt-xlight .c-bolt-icon--orange,:root .c-bolt-icon--orange{color:#f76923;--bolt-theme-icon:#f76923;filter:drop-shadow(0 0 1px rgba(255, 255, 255, .2))}.t-bolt-light .c-bolt-icon--orange.has-background,.t-bolt-xlight .c-bolt-icon--orange.has-background,:root .c-bolt-icon--orange.has-background{--bolt-theme-icon:white;--bolt-theme-icon-background:#f76923;--bolt-theme-icon-background-opacity:1;color:#fff}.t-bolt-light .c-bolt-icon--orange.has-background .c-bolt-icon__background-shape,.t-bolt-xlight .c-bolt-icon--orange.has-background .c-bolt-icon__background-shape,:root .c-bolt-icon--orange.has-background .c-bolt-icon__background-shape{opacity:1;background-color:#f76923}.t-bolt-light .c-bolt-icon--teal,.t-bolt-xlight .c-bolt-icon--teal,:root .c-bolt-icon--teal{color:#10a5ac;--bolt-theme-icon:#10a5ac;filter:drop-shadow(0 0 1px rgba(255, 255, 255, .2))}.t-bolt-light .c-bolt-icon--teal.has-background,.t-bolt-xlight .c-bolt-icon--teal.has-background,:root .c-bolt-icon--teal.has-background{--bolt-theme-icon:white;--bolt-theme-icon-background:#10a5ac;--bolt-theme-icon-background-opacity:1;color:#fff}.t-bolt-light .c-bolt-icon--teal.has-background .c-bolt-icon__background-shape,.t-bolt-xlight .c-bolt-icon--teal.has-background .c-bolt-icon__background-shape,:root .c-bolt-icon--teal.has-background .c-bolt-icon__background-shape{opacity:1;background-color:#10a5ac}.t-bolt-light .c-bolt-icon--yellow,.t-bolt-xlight .c-bolt-icon--yellow,:root .c-bolt-icon--yellow{color:#e8af17;--bolt-theme-icon:#e8af17;filter:drop-shadow(0 0 1px rgba(21, 22, 25, .2))}.t-bolt-light .c-bolt-icon--yellow.has-background,.t-bolt-xlight .c-bolt-icon--yellow.has-background,:root .c-bolt-icon--yellow.has-background{--bolt-theme-icon:#151619;--bolt-theme-icon-background:#ffc836;--bolt-theme-icon-background-opacity:1;color:#151619}.t-bolt-light .c-bolt-icon--yellow.has-background .c-bolt-icon__background-shape,.t-bolt-xlight .c-bolt-icon--yellow.has-background .c-bolt-icon__background-shape,:root .c-bolt-icon--yellow.has-background .c-bolt-icon__background-shape{opacity:1;background-color:#ffc836}.t-bolt-light .c-bolt-icon--pink,.t-bolt-xlight .c-bolt-icon--pink,:root .c-bolt-icon--pink{color:#e63690;--bolt-theme-icon:#e63690;filter:drop-shadow(0 0 1px rgba(255, 255, 255, .2))}.t-bolt-light .c-bolt-icon--pink.has-background,.t-bolt-xlight .c-bolt-icon--pink.has-background,:root .c-bolt-icon--pink.has-background{--bolt-theme-icon:white;--bolt-theme-icon-background:#e63690;--bolt-theme-icon-background-opacity:1;color:#fff}.t-bolt-light .c-bolt-icon--pink.has-background .c-bolt-icon__background-shape,.t-bolt-xlight .c-bolt-icon--pink.has-background .c-bolt-icon__background-shape,:root .c-bolt-icon--pink.has-background .c-bolt-icon__background-shape{opacity:1;background-color:#e63690}.t-bolt-light .c-bolt-icon--berry,.t-bolt-xlight .c-bolt-icon--berry,:root .c-bolt-icon--berry{color:#ac1361;--bolt-theme-icon:#ac1361;filter:drop-shadow(0 0 1px rgba(255, 255, 255, .2))}.t-bolt-light .c-bolt-icon--berry.has-background,.t-bolt-xlight .c-bolt-icon--berry.has-background,:root .c-bolt-icon--berry.has-background{--bolt-theme-icon:white;--bolt-theme-icon-background:#ac1361;--bolt-theme-icon-background-opacity:1;color:#fff}.t-bolt-light .c-bolt-icon--berry.has-background .c-bolt-icon__background-shape,.t-bolt-xlight .c-bolt-icon--berry.has-background .c-bolt-icon__background-shape,:root .c-bolt-icon--berry.has-background .c-bolt-icon__background-shape{opacity:1;background-color:#ac1361}.t-bolt-light .c-bolt-icon--wine,.t-bolt-xlight .c-bolt-icon--wine,:root .c-bolt-icon--wine{color:#661d34;--bolt-theme-icon:#661d34;filter:drop-shadow(0 0 1px rgba(255, 255, 255, .2))}.t-bolt-light .c-bolt-icon--wine.has-background,.t-bolt-xlight .c-bolt-icon--wine.has-background,:root .c-bolt-icon--wine.has-background{--bolt-theme-icon:white;--bolt-theme-icon-background:#661d34;--bolt-theme-icon-background-opacity:1;color:#fff}.t-bolt-light .c-bolt-icon--wine.has-background .c-bolt-icon__background-shape,.t-bolt-xlight .c-bolt-icon--wine.has-background .c-bolt-icon__background-shape,:root .c-bolt-icon--wine.has-background .c-bolt-icon__background-shape{opacity:1;background-color:#661d34}.t-bolt-light .c-bolt-icon--violet,.t-bolt-xlight .c-bolt-icon--violet,:root .c-bolt-icon--violet{color:#5f67b9;--bolt-theme-icon:#5f67b9;filter:drop-shadow(0 0 1px rgba(255, 255, 255, .2))}.t-bolt-light .c-bolt-icon--violet.has-background,.t-bolt-xlight .c-bolt-icon--violet.has-background,:root .c-bolt-icon--violet.has-background{--bolt-theme-icon:white;--bolt-theme-icon-background:#5f67b9;--bolt-theme-icon-background-opacity:1;color:#fff}.t-bolt-light .c-bolt-icon--violet.has-background .c-bolt-icon__background-shape,.t-bolt-xlight .c-bolt-icon--violet.has-background .c-bolt-icon__background-shape,:root .c-bolt-icon--violet.has-background .c-bolt-icon__background-shape{opacity:1;background-color:#5f67b9}.t-bolt-dark .c-bolt-icon--gray,.t-bolt-xdark .c-bolt-icon--gray{color:#8d8e99;--bolt-theme-icon:#8d8e99;filter:drop-shadow(0 0 1px rgba(255, 255, 255, .2))}.t-bolt-dark .c-bolt-icon--gray.has-background,.t-bolt-xdark .c-bolt-icon--gray.has-background{--bolt-theme-icon:white;--bolt-theme-icon-background:#5c5d66;--bolt-theme-icon-background-opacity:1;color:#fff}.t-bolt-dark .c-bolt-icon--gray.has-background .c-bolt-icon__background-shape,.t-bolt-xdark .c-bolt-icon--gray.has-background .c-bolt-icon__background-shape{opacity:1;background-color:#5c5d66}.t-bolt-dark .c-bolt-icon--navy,.t-bolt-xdark .c-bolt-icon--navy{color:#abc2f2;--bolt-theme-icon:#abc2f2;filter:drop-shadow(0 0 1px rgba(21, 22, 25, .2))}.t-bolt-dark .c-bolt-icon--navy.has-background,.t-bolt-xdark .c-bolt-icon--navy.has-background{--bolt-theme-icon:white;--bolt-theme-icon-background:#3e67bb;--bolt-theme-icon-background-opacity:1;color:#fff}.t-bolt-dark .c-bolt-icon--navy.has-background .c-bolt-icon__background-shape,.t-bolt-xdark .c-bolt-icon--navy.has-background .c-bolt-icon__background-shape{opacity:1;background-color:#3e67bb}.t-bolt-dark .c-bolt-icon--orange,.t-bolt-xdark .c-bolt-icon--orange{color:#ff9866;--bolt-theme-icon:#ff9866;filter:drop-shadow(0 0 1px rgba(21, 22, 25, .2))}.t-bolt-dark .c-bolt-icon--orange.has-background,.t-bolt-xdark .c-bolt-icon--orange.has-background{--bolt-theme-icon:white;--bolt-theme-icon-background:#f76923;--bolt-theme-icon-background-opacity:1;color:#fff}.t-bolt-dark .c-bolt-icon--orange.has-background .c-bolt-icon__background-shape,.t-bolt-xdark .c-bolt-icon--orange.has-background .c-bolt-icon__background-shape{opacity:1;background-color:#f76923}.t-bolt-dark .c-bolt-icon--teal,.t-bolt-xdark .c-bolt-icon--teal{color:#86cac6;--bolt-theme-icon:#86cac6;filter:drop-shadow(0 0 1px rgba(21, 22, 25, .2))}.t-bolt-dark .c-bolt-icon--teal.has-background,.t-bolt-xdark .c-bolt-icon--teal.has-background{--bolt-theme-icon:white;--bolt-theme-icon-background:#10a5ac;--bolt-theme-icon-background-opacity:1;color:#fff}.t-bolt-dark .c-bolt-icon--teal.has-background .c-bolt-icon__background-shape,.t-bolt-xdark .c-bolt-icon--teal.has-background .c-bolt-icon__background-shape{opacity:1;background-color:#10a5ac}.t-bolt-dark .c-bolt-icon--yellow,.t-bolt-xdark .c-bolt-icon--yellow{color:#ffc836;--bolt-theme-icon:#ffc836;filter:drop-shadow(0 0 1px rgba(21, 22, 25, .2))}.t-bolt-dark .c-bolt-icon--yellow.has-background,.t-bolt-xdark .c-bolt-icon--yellow.has-background{--bolt-theme-icon:#151619;--bolt-theme-icon-background:#ffc836;--bolt-theme-icon-background-opacity:1;color:#151619}.t-bolt-dark .c-bolt-icon--yellow.has-background .c-bolt-icon__background-shape,.t-bolt-xdark .c-bolt-icon--yellow.has-background .c-bolt-icon__background-shape{opacity:1;background-color:#ffc836}.t-bolt-dark .c-bolt-icon--pink,.t-bolt-xdark .c-bolt-icon--pink{color:#e63690;--bolt-theme-icon:#e63690;filter:drop-shadow(0 0 1px rgba(255, 255, 255, .2))}.t-bolt-dark .c-bolt-icon--pink.has-background,.t-bolt-xdark .c-bolt-icon--pink.has-background{--bolt-theme-icon:white;--bolt-theme-icon-background:#e63690;--bolt-theme-icon-background-opacity:1;color:#fff}.t-bolt-dark .c-bolt-icon--pink.has-background .c-bolt-icon__background-shape,.t-bolt-xdark .c-bolt-icon--pink.has-background .c-bolt-icon__background-shape{opacity:1;background-color:#e63690}.t-bolt-dark .c-bolt-icon--berry,.t-bolt-xdark .c-bolt-icon--berry{color:#ac1361;--bolt-theme-icon:#ac1361;filter:drop-shadow(0 0 1px rgba(255, 255, 255, .2))}.t-bolt-dark .c-bolt-icon--berry.has-background,.t-bolt-xdark .c-bolt-icon--berry.has-background{--bolt-theme-icon:white;--bolt-theme-icon-background:#ac1361;--bolt-theme-icon-background-opacity:1;color:#fff}.t-bolt-dark .c-bolt-icon--berry.has-background .c-bolt-icon__background-shape,.t-bolt-xdark .c-bolt-icon--berry.has-background .c-bolt-icon__background-shape{opacity:1;background-color:#ac1361}.t-bolt-dark .c-bolt-icon--wine,.t-bolt-xdark .c-bolt-icon--wine{color:#661d34;--bolt-theme-icon:#661d34;filter:drop-shadow(0 0 1px rgba(255, 255, 255, .2))}.t-bolt-dark .c-bolt-icon--wine.has-background,.t-bolt-xdark .c-bolt-icon--wine.has-background{--bolt-theme-icon:white;--bolt-theme-icon-background:#661d34;--bolt-theme-icon-background-opacity:1;color:#fff}.t-bolt-dark .c-bolt-icon--wine.has-background .c-bolt-icon__background-shape,.t-bolt-xdark .c-bolt-icon--wine.has-background .c-bolt-icon__background-shape{opacity:1;background-color:#661d34}.t-bolt-dark .c-bolt-icon--violet,.t-bolt-xdark .c-bolt-icon--violet{color:#5f67b9;--bolt-theme-icon:#5f67b9;filter:drop-shadow(0 0 1px rgba(255, 255, 255, .2))}.t-bolt-dark .c-bolt-icon--violet.has-background,.t-bolt-xdark .c-bolt-icon--violet.has-background{--bolt-theme-icon:white;--bolt-theme-icon-background:#5f67b9;--bolt-theme-icon-background-opacity:1;color:#fff}.t-bolt-dark .c-bolt-icon--violet.has-background .c-bolt-icon__background-shape,.t-bolt-xdark .c-bolt-icon--violet.has-background .c-bolt-icon__background-shape{opacity:1;background-color:#5f67b9}
            </style>
            <svg style="position: absolute; width: 0; height: 0"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 id="chevron-down"
            >
              <path fill="var(--bolt-theme-icon, currentColor)"
                    fill-rule="evenodd"
                    d="M25 13c.5-.6.5-1.4 0-2-.6-.5-1.4-.5-2 0l-7 7.1-7-7a1.3 1.3 0 00-2.3.9c0 .3.1.7.4 1l8 8c.5.5 1.3.5 1.8 0l8-8z"
              >
              </path>
            </svg>
            <span class="c-bolt-icon c-bolt-icon--chevron-down c-bolt-icon--auto">
              <svg class="c-bolt-icon__icon">
                <use href="#chevron-down">
                </use>
              </svg>
            </span>
          </bolt-icon>
        </span>
      </button>
      <div class="c-bolt-tabs__dropdown">
        <div class="c-bolt-tabs__dropdown-list">
          <bolt-trigger no-outline
                        role="tab"
                        class="c-bolt-tabs__label c-bolt-tabs__item c-bolt-tabs__label--spacing-small c-bolt-tabs__label--is-duplicate c-bolt-tabs__label--vertical-border"
                        display="block"
                        aria-selected="true"
                        aria-controls="tab-panel-12345-1"
                        id="tab-dropdown-12345-1"
                        tabindex="0"
                        aria-hidden="false"
          >
            <span class="c-bolt-tabs__label-inner">
              <span class="c-bolt-tabs__label-text">
                Tab label 1
              </span>
            </span>
          </bolt-trigger>
          <bolt-trigger no-outline
                        role="tab"
                        class="c-bolt-tabs__label c-bolt-tabs__item c-bolt-tabs__label--spacing-small c-bolt-tabs__label--is-duplicate c-bolt-tabs__label--vertical-border"
                        display="block"
                        aria-selected="false"
                        aria-controls="tab-panel-12345-2"
                        id="tab-dropdown-12345-2"
                        tabindex="-1"
                        aria-hidden="false"
          >
            <span class="c-bolt-tabs__label-inner">
              <span class="c-bolt-tabs__label-text">
                Tab label 2
              </span>
            </span>
          </bolt-trigger>
          <bolt-trigger no-outline
                        role="tab"
                        class="c-bolt-tabs__label c-bolt-tabs__item c-bolt-tabs__label--spacing-small c-bolt-tabs__label--is-duplicate c-bolt-tabs__label--vertical-border"
                        display="block"
                        aria-selected="false"
                        aria-controls="tab-panel-12345-3"
                        id="tab-dropdown-12345-3"
                        tabindex="-1"
                        aria-hidden="false"
          >
            <span class="c-bolt-tabs__label-inner">
              <span class="c-bolt-tabs__label-text">
                Tab label 3
              </span>
            </span>
          </bolt-trigger>
        </div>
      </div>
    </div>
  </div>
  <div class="c-bolt-tabs__panels-container">
    <slot>
    </slot>
  </div>
</div>
`;

exports[`Bolt Tabs default with web component 3`] = `
<bolt-tabs ready
           class
>
  <bolt-tab-panel selected>
    <div slot="label">
      Tab label 1
    </div>
    This is the tab content.
  </bolt-tab-panel>
  <bolt-tab-panel>
    <div slot="label">
      Tab label 2
    </div>
    This is the tab content.
  </bolt-tab-panel>
  <bolt-tab-panel>
    <div slot="label">
      Tab label 3
    </div>
    This is the tab content.
  </bolt-tab-panel>
</bolt-tabs>
`;
